# mlx-coffers

./: CONTRIBUTING.md  GROKIPEDIA_ARTICLE.md  PAPER_OUTLINE.md  README.md  coffer_demo.py  coffer_router.py  distributed_matmul.py  mlx_coffers.py  mlx_matmul_server.py  proof.md  pyproject.toml  requirements.txt  test_coffers_synthetic.py
tests/: test_mlx_coffers_routing.py
